[tool.poetry]
name = "sessions"
version = "0.1.0"
description = ""
authors = ["Kera Korotkov <kera_korotkov@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.12"
telebot = "^0.0.5"
schedule = "^1.2.1"
httplib2 = "^0.22.0"
google-api-python-client = "^2.116.0"
oauth2client = "^4.1.3"
attrs = "^23.2.0"
google-auth-httplib2 = "^0.2.0"
google-auth-oauthlib = "^1.2.0"
datetime = "^5.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
